<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_corner_top_orange"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="12dp"
            android:text="@string/add_to_playlist"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/iv_playlist_close"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:padding="6dp"
            android:src="@mipmap/ic_close_dialog" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_dialog_playlist"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="7dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_empty_dialog_pl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/err_no_playlist_found"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/line_horizontal_grey"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_close_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/close"
            android:textColor="@color/white"
            android:visibility="gone"
            app:backgroundTint="@color/colorPrimary" />

        <LinearLayout
            android:id="@+id/ll_add_playlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <EditText
                android:id="@+id/et_playlist_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/enter_playlist_name" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_add"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/add"
                android:textColor="@color/white"
                android:layout_marginStart="5dp"
                app:backgroundTint="@color/colorPrimary" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_dialog_addplaylist"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:text="@string/create_new_playlist"
            android:textColor="@color/white"
            app:backgroundTint="@color/colorPrimary"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"/>

    </LinearLayout>

</LinearLayout>