<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_forgostpass"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:title="@string/forgot_pass"
        android:background="@color/colorPrimary"/>

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_forgostpass"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:text="@string/forgot_pass"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv"
        android:layout_centerInParent="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="50dp"
        android:gravity="center"
        android:text="@string/forgot_password_message"
        android:textSize="15sp"
        android:textColor="@color/black80"/>

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv1"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="30dp">

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="7dp"
                android:contentDescription="@string/image"
                android:src="@mipmap/email" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/white"
                android:theme="@style/TextLabel_GREY"
                app:backgroundTint="@android:color/transparent">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_forgot_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll1"
            android:gravity="bottom"
            android:orientation="horizontal">

            <View
                android:layout_width="1dp"
                android:layout_height="5dp"
                android:background="@color/black80" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/black80" />

            <View
                android:layout_width="1dp"
                android:layout_height="5dp"
                android:background="@color/black80" />

        </LinearLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/button_forgot_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl"
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/send"
        android:textColor="@color/white" />

</RelativeLayout>